methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:24: error: not found: value makeV
  makeV() 
  ^